Deployments/middleware-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware
spec:
  selector:
    matchLabels:
      app: middleware
  replicas: 1
  template:
    metadata:
      labels:
        app: middleware
    spec:
      containers:
        - name: middleware
          image: d0fc41ec9cbe4bdebd01d7b30df6209b.azurecr.io/middleware:v1
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 5501
              path: /
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 20
          livenessProbe:
            httpGet:
              port: 5501
              path: /
            initialDelaySeconds: 20
            timeoutSeconds: 20
            periodSeconds: 20
          resources:
            requests:
              memory: "900Mi"
              cpu: "500m"
            limits:
              memory: "2048Mi"
              cpu: "1000m"

---
apiVersion: v1
kind: Service
metadata:
  name: middleware
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5501
  selector:
    app: middleware
